--- a/views/css/admin/module.css
+++ b/views/css/admin/module.css
@@ -66,7 +66,7 @@
   display: block;
   background: white;
   border-radius: 52px;
-  padding: 20px;
+  padding: 5px;
   width: 64px;
   height: 64px;
   box-sizing: content-box;
@@ -146,3 +146,8 @@
 }
 
 /* Custom styles here: */
+
+table.accesses tfoot {
+  font-weight: bold;
+  background-color: aliceblue;
+}
