--- a/views/templates/admin/cron/cron.html.twig
+++ b/views/templates/admin/cron/cron.html.twig
@@ -7,7 +7,7 @@
  * @license   commercial, see licence.txt
  *#}
 {% extends '@PrestaShop/Admin/layout.html.twig' %}
-{% form_theme cronForm '@PrestaShop/Admin/TwigTemplateForm/prestashop_ui_kit.html.twig' %}
+{% form_theme form '@PrestaShop/Admin/TwigTemplateForm/prestashop_ui_kit.html.twig' %}
 
 {% block content %}
 <div class="row justify-content-center cronjobs">
@@ -138,7 +138,7 @@
   </div>
 
   <div class="col-xl-6">
-    {{ form_start(cronForm) }}
+    {{ form_start(form) }}
     <div class="card">
       <h3 class="card-header">
         <i class="material-icons">settings</i> {{ 'Settings'|trans({}, 'Modules.Pslegalcompliance.Admin') }}
@@ -146,7 +146,7 @@
 
       <div class="card-body">
         <div class="form-wrapper">
-          {{ form_widget(cronForm) }}
+          {{ form_widget(form) }}
         </div>
       </div>
       <div class="card-footer">
@@ -155,7 +155,7 @@
         </div>
       </div>
     </div>
-    {{ form_end(cronForm) }}
+    {{ form_end(form) }}
   </div>
 </div>
 {% endblock %}
