--- a/views/templates/admin/license/license.html.twig
+++ b/views/templates/admin/license/license.html.twig
@@ -8,12 +8,12 @@
  *#}
 
 {% extends '@Modules/ps_legalcompliance/views/templates/admin/header/moduleheader.html.twig' %}
-{% form_theme licenseForm '@PrestaShop/Admin/TwigTemplateForm/prestashop_ui_kit.html.twig' %}
+{% form_theme form '@PrestaShop/Admin/TwigTemplateForm/prestashop_ui_kit.html.twig' %}
 
 {% block content %}
 <div class="row justify-content-center">
   <div class="col-xl-10">
-    {{ form_start(licenseForm) }}
+    {{ form_start(form) }}
     <div class="card">
       <h3 class="card-header">
         <i class="material-icons">description</i> {{ 'License agreement'|trans({}, 'Modules.Pslegalcompliance.Admin') }}
@@ -24,7 +24,7 @@
           '%tag_start%': '<a href="http://www.onlineshop-module.de/lizenz-registrieren" target="_blank">',
           '%tag_end%': '</a>',}, 'Modules.Pslegalcompliance.Admin')|raw }}</p>
         <div class="form-wrapper">
-          {{ form_widget(licenseForm) }}
+          {{ form_widget(form) }}
         </div>
       </div>
       <div class="card-footer">
@@ -33,7 +33,7 @@
         </div>
       </div>
     </div>
-    {{ form_end(licenseForm) }}
+    {{ form_end(form) }}
   </div>
 </div>
 {% endblock %}
