--- a/views/templates/admin/form_ui_kit.html.twig
+++ b/views/templates/admin/form_ui_kit.html.twig
@@ -1,3 +1,11 @@
+{#**
+ * PS Legalcompliance
+ * Module for PrestaShop E-Commerce Software
+ *
+ * @author    Markus Engel <info@onlineshop-module.de>
+ * @copyright Copyright (c) 2025, Onlineshop-Module.de
+ * @license   commercial, see licence.txt
+ *#}
 {% use '@PrestaShop/Admin/TwigTemplateForm/prestashop_ui_kit.html.twig' %}
 {% trans_default_domain "Modules.Pslegalcompliance.Admin" %}
 
