--- a/views/templates/admin/cron/cron.html.twig
+++ b/views/templates/admin/cron/cron.html.twig
@@ -6,7 +6,7 @@
  * @copyright Copyright (c) 2025, Onlineshop-Module.de
  * @license   commercial, see licence.txt
  *#}
-{% extends '@PrestaShop/Admin/layout.html.twig' %}
+{% extends '@Modules/ps_legalcompliance/views/templates/admin/header/moduleheader.html.twig' %}
 {% form_theme form '@PrestaShop/Admin/TwigTemplateForm/prestashop_ui_kit.html.twig' %}
 
 {% block content %}
