--- a/views/templates/admin/header/moduleheader.html.twig
+++ b/views/templates/admin/header/moduleheader.html.twig
@@ -13,17 +13,17 @@
   <div class="info_panel" id="info_panel">
     <div class="panel-body">
       <div class="row">
-        <div class="info_logo col-md-6">
+        <div class="info_logo col-md-8 col-lg-6">
           <img class="img-fluid" src="{{ module.path }}logo.png" alt="Logo {{ module.display_name }}" width="64" height="64" />
           <h1>{{ module.display_name_pre }} <span>{{ module.display_name_post }}</span></h1>
           <h2>{{ module.description }} </h2>
           <p>{{ module.description_full }}</p>
         </div>
 
-        <div class="info_author col-md-6">
+        <div class="info_author col-md-4 col-lg-6">
           <h2>{{ module.author }} </h2>
           <p>
-            {{ 'Gurkcity creates professional and individual modules and addons for PrestaShop onlinestores since 2010.'|trans({}, 'Modules.Pslegalcompliance.Admin') }}<br>
+            {{ 'Gurkcity creates professional and individual modules and addons for PrestaShop onlinestores since 2010.'|trans({}, 'Modules.Pslegalcompliance.Admin') }}
             {{ 'Get more information from the links below.'|trans({}, 'Modules.Pslegalcompliance.Admin') }}
           </p>
           <address>
