--- a/views/templates/admin/maintenance/_partials/hooks.html.twig
+++ b/views/templates/admin/maintenance/_partials/hooks.html.twig
@@ -17,17 +17,16 @@
       <p>{{ 'This list shows all hooks used by the module. If not all hooks are registered, you can fix this with the button below.'|trans({}, 'Modules.Pslegalcompliance.Admin') }}</p>
 
       {% if hooks.module is not empty %}
-      <table class="hooks_list table">
+      <table class="hooks_list table table-sm table-responsive">
         <thead>
           <tr>
-            <th>{{ 'Hook Name'|trans({}, 'Modules.Pslegalcompliance.Admin') }}</th>
             <th>{{ 'Status'|trans({}, 'Modules.Pslegalcompliance.Admin') }}</th>
+            <th>{{ 'Hook Name'|trans({}, 'Modules.Pslegalcompliance.Admin') }}</th>
           </tr>
         </thead>
         <tbody>
           {% for hook in hooks.module %}
           <tr>
-            <td>{{ hook.name }}</td>
             <td>
               {% if not hook.registered %}
               <span class="badge badge-danger">{{ 'not registered!'|trans({}, 'Modules.Pslegalcompliance.Admin') }}</span>
@@ -35,6 +34,7 @@
               <span class="badge badge-success">{{ 'ok'|trans({}, 'Modules.Pslegalcompliance.Admin') }}</span>
               {% endif %}
             </td>
+            <td>{{ hook.name }}</td>
           </tr>
           {% endfor %}
         </tbody>
@@ -44,20 +44,20 @@
       {% endif %}
 
       {% if hooks.unnecessary is not empty %}
-      <table class="hooks_list_unnecessary table">
+      <table class="hooks_list_unnecessary table table-sm table-responsive">
         <thead>
           <tr>
-            <th>{{ 'Hook Name'|trans({}, 'Modules.Pslegalcompliance.Admin') }}</th>
             <th>{{ 'Status'|trans({}, 'Modules.Pslegalcompliance.Admin') }}</th>
+            <th>{{ 'Hook Name'|trans({}, 'Modules.Pslegalcompliance.Admin') }}</th>
           </tr>
         </thead>
         <tbody>
           {% for hook_name in hooks.unnecessary %}
           <tr>
-            <td>{{ hook_name }}</td>
             <td>
               <span class="badge badge-warning">{{ 'registerd but unnecessary!'|trans({}, 'Modules.Pslegalcompliance.Admin') }}</span>
             </td>
+            <td>{{ hook_name }}</td>
           </tr>
           {% endfor %}
         </tbody>
