--- a/views/templates/admin/maintenance/_partials/orderstate.html.twig
+++ b/views/templates/admin/maintenance/_partials/orderstate.html.twig
@@ -17,17 +17,16 @@
       <p>{{ 'This list shows all order statuses that this module installs. If an order status is not installed correctly, you can reset it here.'|trans({}, 'Modules.Pslegalcompliance.Admin') }}</p>
 
       {% if orderstates is not empty %}
-      <table class="orderstate_list table">
+      <table class="orderstate_list table table-sm table-responsive">
         <thead>
           <tr>
-            <th>{{ 'Name'|trans({}, 'Modules.Pslegalcompliance.Admin') }}</th>
             <th>{{ 'Status'|trans({}, 'Modules.Pslegalcompliance.Admin') }}</th>
+            <th>{{ 'Name'|trans({}, 'Modules.Pslegalcompliance.Admin') }}</th>
           </tr>
         </thead>
         <tbody>
           {% for orderstate in orderstates %}
           <tr>
-            <td>{{ orderstate.name }}</td>
             <td>
               {% if not orderstate.valid %}
               <span class="badge badge-warning">{{ 'missing!'|trans({}, 'Modules.Pslegalcompliance.Admin') }}</span>
@@ -35,6 +34,7 @@
               <span class="badge badge-success">{{ 'ok'|trans({}, 'Modules.Pslegalcompliance.Admin') }}</span>
               {% endif %}
             </td>
+            <td>{{ orderstate.name }}</td>
           </tr>
           {% endfor %}
         </tbody>
