--- a/views/templates/admin/maintenance/maintenance.html.twig
+++ b/views/templates/admin/maintenance/maintenance.html.twig
@@ -7,7 +7,7 @@
  * @license   commercial, see licence.txt
  *#}
 
-{% extends '@PrestaShop/Admin/layout.html.twig' %}
+{% extends '@Modules/ps_legalcompliance/views/templates/admin/header/moduleheader.html.twig' %}
 
 {% block content %}
 <div class="row justify-content-center">
